<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearRank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:text="@string/stats"
        android:textColor="@color/colorGold"
        android:textSize="44sp"
        android:fontFamily="@font/concert_one"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_background">

        <ImageView
            android:id="@+id/iconSummoner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/default_icon"/>

        <TextView
            android:id="@+id/tvsummonerName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/border_background"
            android:paddingLeft="8dp"
            android:text=""
            android:fontFamily="@font/concert_one"
            android:textSize="18sp"
            android:textColor="@color/colorGold"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageRank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="8dp"
        android:src="@drawable/emblem_unranked"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/rank"
                android:textColor="@color/colorGold"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/tier"
                android:textColor="@color/colorGold"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/lp"
                android:textColor="@color/colorGold"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/wins"
                android:textColor="@color/colorGold"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/losses"
                android:textColor="@color/colorGold"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="right"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/tvtier"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Unranked"
                android:gravity="right"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

            <TextView
                android:id="@+id/tvrank"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="I"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

            <TextView
                android:id="@+id/tvlp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

            <TextView
                android:id="@+id/tvwins"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

            <TextView
                android:id="@+id/tvlosses"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="0"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:fontFamily="@font/concert_one"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>