<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_background"
    android:backgroundTint="@color/colorOcean"
    android:backgroundTintMode="screen"
    android:id="@+id/popup_delete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/level"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:text="@string/date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/deleteLevel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="0"/>
                <TextView
                    android:id="@+id/deleteDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:text="00-00-0000"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/ok_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="8dp"
            android:textColor="@color/colorGold"
            android:background="@drawable/border_background_item"
            android:fontFamily="@font/concert_one"/>

    </LinearLayout>

</LinearLayout>